Updates from Overleaf

--- a/styles/phdbibliobyphd.sty
+++ b/styles/phdbibliobyphd.sty
@@ -39,8 +39,8 @@
     \clearfield{note}
     \clearlist{language}
     \clearfield{urldate}
-	\clearfield{issn}
-	\clearfield{isbn}
+	%\clearfield{issn}
+	%\clearfield{isbn}
 	\clearfield{archivePrefix}
 	\clearfield{arxivId}
 	\clearfield{pmid}
