--- a/tex/fundamentals.tex
+++ b/tex/fundamentals.tex
@@ -196,7 +196,7 @@ Compared to fully linked layers, CNNs are able to recognise patterns at differen
 Besides CNNs, alternative architectures for image processing have emerged that are characterised by position invariance, such as the vision transformer (ViT) \cite{dosovitskiy_image_2021} or MLP mixer \cite{tolstikhin_mlp-mixer_2021}. However, providing an in-depth description of these architectures would exceed the scope of this introduction to deep learning.
 
 In the context of the proposed framework, convolutional layers can be used to extract features from images that are further refined in subsequent processing stages.
-Furthermore, the principle of shifting kernels is adopted to provide support between cells independent of the spatial location (c.f. \secref{framework_s1_lat_support}).
+Furthermore, the principle of shifting kernels is adapted to provide support between cells independent of the spatial location (c.f. \secref{framework_s1_lat_support}).
 
 
 \section{Limitations}\seclbl{limitationsDL}
